--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.51",
     "@material-ui/core": "^1.4.2",
+    "@material-ui/icons": "^2.0.0",
+    "final-form": "^4.9.1",
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
     "proptypes": "^1.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-final-form": "^3.6.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   },
