--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "prop-types": "^15.6.2",
     "proptypes": "^1.1.0",
     "react": "^16.4.1",
+    "react-audio-player": "^0.10.0",
     "react-dom": "^16.4.1",
     "react-final-form": "^3.6.5",
+    "react-jplaylist": "^3.1.5",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-sound": "^1.2.0"
   },
   "meteor": {
     "mainModule": {
