--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-audio-player": "^0.10.0",
     "react-dom": "^16.4.1",
     "react-final-form": "^3.6.5",
+    "react-gravatar": "^2.6.3",
     "react-jplaylist": "^3.1.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
