--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-sound": "^1.2.0",
-    "react-swipeable-views": "^0.12.16"
+    "react-swipe-deck": "^0.1.17"
   },
   "meteor": {
     "mainModule": {
