--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-sound": "^1.2.0",
-    "react-swipe-deck": "^0.1.17"
+    "react-swipe-deck": "^0.1.17",
+    "webfontloader": "1.6.28"
   },
   "meteor": {
     "mainModule": {
@@ -32,5 +33,8 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "svg-inline-loader": "^0.8.0"
   }
 }
